feat: accordion responsiveness

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         <span class="question">How many team members can I invite?</span>
         <img src="images/icon-arrow-down.svg" class="arrow">
         <br>
-        <p class="add"></p>
+        <p class="add">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan"</p>
         <hr>
      
         <span class="question">What is the maximum file upload size?</span><img src="images/icon-arrow-down.svg" class="arrow">
         <br>
-        <p class="add"></p>
+        <p class="add">No more than 2GB. All files in your account must fit your allotted storage space.</p>
         <hr>
      
         <span class="question">How do I reset my password?</span><img src="images/icon-arrow-down.svg" class="arrow">
-        <p class="add"></p>
+        <p class="add">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
         <hr>
 
         <span class="question">Can I cancel my subscription?</span> <img src="images/icon-arrow-down.svg" class="arrow">
-        <p class="add"></p>
+        <p class="add">Yes! Send us a message and we’ll process your request no questions asked.</p>
         <hr>
 
         <span class="question">Do you provide additional support?</span><img src="images/icon-arrow-down.svg" class="arrow">
-        <p class="add"></p>
+        <p class="add">Chat and email support is available 24/7. Phone lines are open during normal business hours</p>
         <hr>
         </section>
     </div>
